# Boids

./: .gitignore  CMakeLists.txt
include/Container/: IContainer.h  LinearContainer.h
include/Entities/: Boid.h  IEntity.h
include/Math/: MathPlus.h
include/Render/: Renderer.h
include/Simulation/: BoundariesSolver.h  ModelSolver.h
include/Simulation/Modules/: BoundariesSolver.h  InteractionSolver.h
include/Solver/: ModelSolver.h
include/Utils/: Settings.h  Statistics.h  Time.h
src/: main.cpp
src/Container/: IContainer.cpp
src/Entities/: Boid.cpp  IEntity.cpp
src/Math/: MathPlus.cpp
src/Render/: Renderer.cpp
src/Simulation/: BoundariesSolver.cpp  ModelSolver.cpp
src/Simulation/Modules/: BoundariesSolver.cpp  InteractionSolver.cpp
src/Solver/: ModelSolver.cpp
src/Utils/: Settings.cpp  Time.cpp
